# team3-jpmorgan-hackathon

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.local.json
Backend/: data_processor.py  glasgow_fire_stations.json  glasgow_hazard_data_v2.json  main.py  models.py  predictor.py  pyproject.toml  risk_engine.py  weather_service.py
Team-3/: main.py  pyproject.toml
front-end/jpmorgan/: package-lock.json  package.json  react-router.config.ts  vite.config.ts
front-end/jpmorgan/.claude/: settings.local.json
front-end/jpmorgan/app/: app.css  root.tsx  routes.ts
front-end/jpmorgan/app/components/: LeafletHazardMap.tsx
front-end/jpmorgan/app/routes/: _index.tsx  education.tsx  hazard-map.tsx
