[project]
name = "team-3"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=23.0.0",
    "fastapi>=0.135.3",
    "google-genai>=1.73.1",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "risk-engine>=1.1.0",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.44.0",
]
